@@ -46,11 +46,11 @@ public class TestHumongousAllocInitialMark {
             "-Xmx" + heapSize + "m",
             "-XX:G1HeapRegionSize=" + heapRegionSize + "m",
             "-XX:InitiatingHeapOccupancyPercent=" + initiatingHeapOccupancyPercent,
-            "-XX:+PrintGC",
+            "-Xlog:gc",
             HumongousObjectAllocator.class.getName());
 
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
-        output.shouldContain("GC pause (G1 Humongous Allocation) (young) (initial-mark)");
+        output.shouldContain("Pause Initial Mark (G1 Humongous Allocation)");
         output.shouldNotContain("Full GC");
         output.shouldHaveExitValue(0);
     }
